# azure-ai-chatbot-wall-e

./: pyproject.toml
.github/workflows/: azure-dev.yml  ca-api-cnxlpyxkcdi5g-AutoDeployTrigger-63e63d95-1a70-4b04-aa6e-4cf9b254b1b6.yml
docs/: local_development.md  other_features.md  troubleshooting.md
src/: gunicorn.conf.py
src/frontend/src/components/: App.tsx
src/frontend/src/components/agents/: AgentPreview.module.css  AgentPreview.tsx
