[project]
name = "wall-e"
version = "1.0.0"
description = "Chat app for Azure AI Foundry agent"
dependencies = [
    "fastapi==0.111.0",
    "gunicorn==22.0.0",
    "uvicorn[standard]==0.29.0",
    "opentelemetry-sdk",
    "azure-identity==1.19.0",
    "aiohttp==3.11.1",
    "azure-ai-projects",
    "azure-core-tracing-opentelemetry",
    "azure-monitor-opentelemetry>=1.6.9",
    "azure-search-documents"
]
# If your code is in src/, add this:
# packages = ["src"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["D203"]
